--- a/app/src/main/res/layout/activity_buatpesanan.xml
+++ b/app/src/main/res/layout/activity_buatpesanan.xml
@@ -4,163 +4,179 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
-    <TextView
-        android:id="@+id/textView3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="28dp"
-        android:fontFamily="sans-serif-black"
-        android:text="BUAT PESANAN"
-        android:textColor="#3F51B5"
-        android:textSize="24sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    android:layout_height="match_parent"
+    android:layout_margin="16dp">
 
     <TextView
         android:id="@+id/tvNamaApotik"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="TextView"
-        android:textSize="16dp"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:textSize="36dp"
+        android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView3" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/textView5"
+        android:id="@+id/tv_stock"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
+        android:text="STOK MASKER"
+        android:textSize="10sp"
+        android:layout_marginTop="24dp"
+        app:layout_constraintTop_toBottomOf="@id/tvNamaApotik"
+        app:layout_constraintStart_toStartOf="parent"/>
+
+    <com.google.android.material.card.MaterialCardView
+        android:id="@+id/cv_stock"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/tv_stock"
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginTop="4dp"
+        app:cardCornerRadius="5dp"
+        app:contentPadding="16dp">
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <TextView
+                android:id="@+id/tv_dewasa"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Dewasa    : "
+                android:textStyle="bold"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"/>
+
+            <TextView
+                android:id="@+id/tv_jumlah_stock_dewasa"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="TextView"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toEndOf="@id/tv_dewasa"/>
+
+            <TextView
+                android:id="@+id/tv_harga_dewasa"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="TextView"
+                android:layout_marginStart="16dp"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toEndOf="@id/tv_jumlah_stock_dewasa"/>
+
+            <TextView
+                android:id="@+id/tv_anak"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:text="Anak         : "
+                android:textStyle="bold"
+                app:layout_constraintTop_toBottomOf="@id/tv_dewasa"
+                app:layout_constraintStart_toStartOf="parent"/>
+
+            <TextView
+                android:id="@+id/tv_jumlah_stock_anak"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:text="TextView"
+                app:layout_constraintTop_toBottomOf="@id/tv_jumlah_stock_dewasa"
+                app:layout_constraintStart_toEndOf="@id/tv_anak"/>
+
+            <TextView
+                android:id="@+id/tv_harga_anak"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:layout_marginStart="16dp"
+                android:text="TextView"
+                app:layout_constraintTop_toBottomOf="@id/tv_harga_dewasa"
+                app:layout_constraintStart_toEndOf="@id/tv_jumlah_stock_anak"/>
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </com.google.android.material.card.MaterialCardView>
+
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/material_et_jumlah_dewasa"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:layout_marginTop="36dp"
-        android:fontFamily="sans-serif-black"
-        android:text="Masker Dewasa   "
+        app:layout_constraintTop_toBottomOf="@id/cv_stock"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tvNamaApotik" />
+        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
 
-    <TextView
-        android:id="@+id/textView9"
-        android:layout_width="wrap_content"
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/et_jumlah_dewasa"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="Masker Dewasa"
+            android:inputType="number" />
+
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/material_et_jumlah_anak"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="12dp"
-        android:fontFamily="sans-serif-black"
-        android:text="Masker Anak   "
+        android:layout_marginTop="16dp"
+        app:layout_constraintTop_toBottomOf="@id/material_et_jumlah_dewasa"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/et_jumlah_dewasa" />
+        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/et_jumlah_anak"
+            android:hint="Masker Anak"
+            android:inputType="number"
+            android:visibility="visible"/>
+
+    </com.google.android.material.textfield.TextInputLayout>
 
     <TextView
         android:id="@+id/tv_total_harga"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="16dp"
+        android:layout_marginTop="32dp"
+        android:text="Total Harga"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/material_et_jumlah_anak" />
+
+    <TextView
+        android:id="@+id/tv_rp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="32dp"
+        android:text="Rp. "
+        android:textColor="#3F51B5"
+        app:layout_constraintStart_toEndOf="@id/tv_total_harga"
+        app:layout_constraintTop_toBottomOf="@+id/material_et_jumlah_anak" />
+
+    <TextView
+        android:id="@+id/tv_total_harga_angka"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="32dp"
+        android:layout_marginStart="8dp"
         android:text="0"
         android:textColor="#3F51B5"
         android:textSize="24sp"
-        app:layout_constraintEnd_toStartOf="@+id/btn_pesan_masker"
-        app:layout_constraintTop_toBottomOf="@+id/textView11" />
-
-    <TextView
-        android:id="@+id/textView11"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="32dp"
-        android:layout_marginEnd="16dp"
-        android:fontFamily="sans-serif-black"
-        android:text="Total Harga"
-        app:layout_constraintEnd_toStartOf="@+id/btn_pesan_masker"
-        app:layout_constraintTop_toBottomOf="@+id/et_jumlah_anak" />
-
-    <TextView
-        android:id="@+id/tv_harga_dewasa"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="36dp"
-        android:text="TextView"
-        android:textColor="#3F51B5"
-        app:layout_constraintStart_toEndOf="@+id/tv_jumlah_stock_dewasa"
-        app:layout_constraintTop_toBottomOf="@+id/tvNamaApotik" />
-
-    <EditText
-        android:id="@+id/et_jumlah_dewasa"
-        android:layout_width="376dp"
-        android:layout_height="44dp"
-        android:ems="10"
-        android:hint="Masukkan Jumlah "
-        android:inputType="number"
-        android:textColorHint="#B6B6B6"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.457"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView5" />
-
-    <EditText
-        android:id="@+id/et_jumlah_anak"
-        android:layout_width="376dp"
-        android:layout_height="44dp"
-        android:ems="10"
-        android:hint="Masukkan Jumlah "
-        android:inputType="number"
-        android:textColorHint="#B6B6B6"
-        android:visibility="visible"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.457"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView9" />
-
-    <TextView
-        android:id="@+id/tv_harga_anak"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="12dp"
-        android:text="TextView"
-        android:textColor="#3F51B5"
-        app:layout_constraintStart_toEndOf="@+id/tv_jumlah_stock_anak"
-        app:layout_constraintTop_toBottomOf="@+id/et_jumlah_dewasa" />
+        app:layout_constraintStart_toEndOf="@id/tv_rp"
+        app:layout_constraintTop_toBottomOf="@+id/material_et_jumlah_anak" />
 
     <Button
         android:id="@+id/btn_pesan_masker"
-        android:layout_width="110dp"
+        android:layout_width="match_parent"
         android:layout_height="57dp"
-        android:layout_marginTop="32dp"
-        android:layout_marginEnd="16dp"
         android:onClick="PesanOnClick"
         android:text="Pesan"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/et_jumlah_anak" />
-
-    <TextView
-        android:id="@+id/tv_jumlah_stock_dewasa"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="36dp"
-        android:text="TextView"
-        android:textColor="#3F51B5"
-        app:layout_constraintStart_toEndOf="@+id/textView5"
-        app:layout_constraintTop_toBottomOf="@+id/tvNamaApotik" />
-
-    <TextView
-        android:id="@+id/tv_jumlah_stock_anak"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="12dp"
-        android:text="TextView"
-        android:textColor="#3F51B5"
-        app:layout_constraintStart_toEndOf="@+id/textView9"
-        app:layout_constraintTop_toBottomOf="@+id/et_jumlah_dewasa" />
-
-    <TextView
-        android:id="@+id/textView4"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:text="Rp. "
-        android:textColor="#3F51B5"
-        app:layout_constraintEnd_toStartOf="@+id/tv_total_harga"
-        app:layout_constraintTop_toBottomOf="@+id/textView11" />
+        android:textSize="14sp"
+        android:layout_marginTop="16dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tv_total_harga_angka" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
