--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -119,7 +119,7 @@
         android:id="@+id/tvPassword"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/attribute_password"
+        android:text="******"
         android:textSize="14sp"
         android:textStyle="bold"
         android:layout_marginTop="4dp"
