--- a/app/src/main/res/layout/activity_buatpesanan.xml
+++ b/app/src/main/res/layout/activity_buatpesanan.xml
@@ -34,6 +34,7 @@
         app:layout_constraintTop_toBottomOf="@id/tv_stock"
         app:layout_constraintStart_toStartOf="parent"
         android:layout_marginTop="4dp"
+        android:layout_marginHorizontal="1dp"
         app:cardCornerRadius="5dp"
         app:contentPadding="16dp">
 
